packages/website/src/components/sections/Integrations.css
.Integrations {
  display: flex;
  flex-direction:column;
  text-align:center;
}

.Integrations-Header{
  font-size: 48px;
  font-weight:700;
}

.Integrations-List{
  display: flex;
  flex-wrap:wrap;
  gap: 1.5em;
  align-items:center;
  margin:4em;
}

.Integrations-Button{
  display:flex;
  gap:0.5em;
  align-items:center;
  padding:6px 16px;
  color: var(--color-text-inverse);
  cursor:pointer;
  background-color: var(--color-ui-base);
  border-radius: 0.25em;

  & svg{
    block-size:12px;
    inline-size:12px;

  }
}

